@@ -116,14 +116,16 @@
     // After we created the record (model), we can get rid of the meta column
     this.columns.remove(metaColumn);
 
-    // Prepare column model config with columns in the correct order
+    // Prepare column model config with columns in the correct order; columns out of order go to the end.
     var colModelConfig = [];
+    var columns = this.columns;
 
     Ext.each(this.columnsOrder, function(c) {
       var mainColConfig;
       Ext.each(this.columns, function(oc) {
         if (c.name === oc.name) {
-          mainColConfig = oc;
+          mainColConfig = Ext.apply({}, oc);
+          // oc.inOrder = true;
           return false;
         }
       });
