@@ -1,4 +1,6 @@
 = v0.6.5 - to be released
+* enhancements
+  * When columns states are saved in the persistent storage, adding/removing columns (e.g. in the code) will reset the saved states
 * bug fix
   * FormPanel with multiple association fields wouldn't submit data correctly
 
